--- a/README.pod
+++ b/README.pod
@@ -1,6 +1,6 @@
 =head1 A parallel version of the Swiss Ephemeris
 
-This repository is used during development of a thread safe version of Alois Treindl's and Dieter Koch's L<Swiss Ephemeris|http://www.astro.com/swisseph/>. This would be helpful when integrating the ephemeris into a web application using a multithreading-enabled web container (working with, e.g. Java servlets or on an Apache Web Server with C<mod_perl>). Since ephemeris computations are CPU intensive, they take advantage of parallelization, achieving a performance that scales with the number of processor cores in use. This is another reason that makes a parallelized version of Swiss Ephemeris attractive.
+This repository is used during development of a thread safe version of Alois Treindl's and Dieter Koch's Swiss Ephemeris (L<http://www.astro.com/swisseph/>). This would be helpful when integrating the ephemeris into a web application using a multithreading-enabled web container (working with, e.g. Java servlets or on an Apache Web Server with C<mod_perl>). Since ephemeris computations are CPU intensive, they take advantage of parallelization, achieving a performance that scales with the number of processor cores in use. This is another reason that makes a parallelized version of Swiss Ephemeris attractive.
 
 
 
