--- a/README.pod
+++ b/README.pod
@@ -1,6 +1,6 @@
 =head1 A parallel version of the Swiss Ephemeris
 
-NOTE: Since release 2.03, the Swiss Ephemeris is multithreading enabled. The way to achieve this was to simply declare all global and stativ variables as thread-local (storage class TLS). This git repo therefore is here only for historical reasons.
+NOTE: Since release 2.03, the Swiss Ephemeris is multithreading enabled. The way to achieve this was to simply declare all global and static variables as thread-local (storage class TLS). This git repo therefore is here only for historical reasons.
 
 This repository is used during development of a thread safe version of Alois Treindl's and Dieter Koch's Swiss Ephemeris (L<http://www.astro.com/swisseph/>). This would be helpful when integrating the ephemeris into a web application using a multithreading-enabled web container (working with, e.g. Java servlets or on an Apache Web Server with C<mod_perl>). Since ephemeris computations are CPU intensive, they take advantage of parallelization, achieving a performance that scales with the number of processor cores in use. This is another reason that makes a parallelized version of Swiss Ephemeris attractive.
 
